--- a/walfrutas/package.json
+++ b/walfrutas/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "puppeteer": "^9.1.1"
+    "puppeteer": "^9.1.1",
+    "simple-node-logger": "^18.12.24"
   }
 }
