new group and dev script configuration

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ lastPost.json
 docs/comunicado - mLabs_ Gerenciamento de Redes Sociais em um só lugar!.html
 walfrutas/src/log/.log
 walfrutas/src/log/walfrutas.log
+walfrutas/src/log/walfrutas.log
+walfrutas/log/walfrutas.log
